# xorg-xserver

./: .gitlab-ci.yml  .mailmap  CoC.md  README.md  TODO  meson.build  meson_options.txt
.gitlab-ci/: cross-prereqs-build.sh  debian-install.sh
Xext/: bigreq.c  dpms.c  dpmsproc.h  geext.c  geext.h  geext_priv.h  hashtable.c  hashtable.h  meson.build  panoramiX.c  panoramiX.h  panoramiXSwap.c  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  securitysrv.h  shape.c  shm.c  sleepuntil.c  sleepuntil.h  sync.c  vidmode.c  xace.c  xace.h  xacestr.h  xcmisc.c  xcontainer.c  xf86bigfont.c  xres.c  xselinux_ext.c  xselinux_hooks.c  xselinux_label.c  xtest.c  xvdisp.c  xvdisp.h  xvdix.h  xvmain.c  xvmc.c  xvmcext.h
Xext/namespace/: config.c  hook-client.c  hook-clientstate.c  hook-device.c  hook-ext-access.c  hook-ext-dispatch.c  hook-init-rootwindow.c  hook-property.c  hook-receive.c  hook-resource.c  hook-selection.c  hook-send.c  hook-server.c  hook-windowproperty.c  hooks.h  meson.build  namespace.c  namespace.h  ns.conf.example
Xi/: allowev.c  chgdctl.c  chgdctl.h  chgfctl.c  chgkbd.c  chgkmap.c  chgprop.c  chgptr.c  closedev.c  devbell.c  exevents.c  exglobals.h  extinit.c  getbmap.c  getbmap.h  getdctl.c  getdctl.h  getfctl.c  getfctl.h  getfocus.c  getfocus.h  getkmap.c  getkmap.h  getmmap.c  getmmap.h  getprop.c  getprop.h  getselev.c  getselev.h  getvers.c  getvers.h  grabdev.c  grabdev.h  grabdevb.c  grabdevk.c  gtmotion.c  gtmotion.h  listdev.c  listdev.h  opendev.c  (+42 more)
composite/: compalloc.c  compext.c  compinit.c  compint.h  compositeext.h  compoverlay.c  compwindow.c
config/: config.c  dbus-core.c  hal.c  hotplug_priv.h  udev.c  wscons.c
damageext/: damageext.c  damageextint.h
dbe/: dbe.c  dbestruct.h  midbe.c  midbe.h
dix/: atom.c  atom_priv.h  callback_priv.h  closestr.h  colormap.c  colormap_priv.h  cursor.c  cursor_priv.h  devices.c  dispatch.c  dix_priv.h  dixfonts.c  dixgrabs_priv.h  dixutils.c  enterleave.c  eventconvert.c  events.c  exevents_priv.h  extension.c  extension_priv.h  gc.c  gc_priv.h  generate-atoms  gestures.c  getevents.c  globals.c  glyphcurs.c  grabs.c  input_priv.h  inpututils.c  lookup.c  main.c  meson.build  pixmap.c  privates.c  property.c  property_priv.h  ptrveloc.c  ptrveloc_priv.h  region.c  (+17 more)
doc/: Xnamespace.md  Xserver-spec.xml
dri3/: dri3.c  dri3.h  dri3_priv.h  dri3_request.c  dri3_screen.c
exa/: exa.c  exa.h  exa_accel.c  exa_classic.c  exa_driver.c  exa_glyphs.c  exa_migration_mixed.c  exa_mixed.c  exa_offscreen.c  exa_priv.h  exa_unaccel.c
fb/: fb.h  fb_priv.h  fballpriv.c  fbarc.c  fbbits.h  (+21 more)
hw/xnest/: Args.c  Args.h  Color.c  Color.h  Cursor.c  Display.c  Display.h  Events.c  Events.h  Font.c  GC.c  GCOps.c  Handlers.c  Init.c  Keyboard.c  Keyboard.h  Pixmap.c  Pointer.c  Screen.c  Screen.h  Visual.c  Window.c  XNFont.h  XNGC.h  XNWindow.h  Xnest.h  meson.build  xcb.c  xkb.c  xnest-config.h  xnest-xcb.h  xnest-xkb.h
(+551 files in other folders)
