libxserver_namespace = static_library(
	'libxserver_namespace',
	[
		'config.c',
		'hook-client.c',
		'hook-clientstate.c',
		'hook-device.c',
		'hook-ext-access.c',
		'hook-ext-dispatch.c',
		'hook-init-rootwindow.c',
		'hook-receive.c',
		'hook-resource.c',
		'hook-selection.c',
		'hook-send.c',
		'hook-server.c',
		'hook-windowproperty.c',
		'namespace.c',
	],
	include_directories: inc,
	dependencies: common_dep,
)
